--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,13 @@
 <div class="enhanced-navbar">
   <div class="main-title center-content">
-    <span class="shreya">🌸</span>
+    <span class="shreya">Shreya</span>
     &
     <span class="kaito">Kaito</span>
   </div>
   
   <div class="nav-tabs single-row">
     <div class="tab {% if page.url == '/' or page.url == '/index.html' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/" class="nav-link home-link">
-        <span class="home-icon">🏠</span> Home
-      </a>
+      <a href="{{ site.baseurl }}/" class="nav-link home-link"> Home </a>
     </div>
     
     <div class="tab {% if page.title == 'Event Schedule' %}current-tab{% endif %}">
