--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,27 +11,27 @@
     </div>
     
     <div class="tab {% if page.title == 'Event Schedule' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/events" class="nav-link">Events</a>
+      <a href="{{ site.baseurl }}/events.html" class="nav-link">Events</a>
     </div>
     
     <div class="tab {% if page.title == 'Travel Information' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/travel-info" class="nav-link">Travel Info</a>
+      <a href="{{ site.baseurl }}/travel-info.html" class="nav-link">Travel Info</a>
     </div>
     
     <div class="tab {% if page.title == 'Recommendations in Bangalore' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/recos" class="nav-link">Recommendations</a>
+      <a href="{{ site.baseurl }}/recos.html" class="nav-link">Recommendations</a>
     </div>
     
     <div class="tab {% if page.title == 'Q&A' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/qa" class="nav-link">Q&A</a>
+      <a href="{{ site.baseurl }}/qa.html" class="nav-link">Q&A</a>
     </div>
     
     <div class="tab {% if page.title == 'Gallery' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/gallery" class="nav-link">Gallery</a>
+      <a href="{{ site.baseurl }}/gallery.html" class="nav-link">Gallery</a>
     </div>
     
     <div class="tab {% if page.title == 'RSVP' %}current-tab{% endif %}">
-      <a href="{{ site.baseurl }}/rsvp" class="nav-link">RSVP</a>
+      <a href="{{ site.baseurl }}/rsvp.html" class="nav-link">RSVP</a>
     </div>
   </div>
 </div>
